Patched phpspec. Posts display.

--- a/fa/components/post/post.html
+++ b/fa/components/post/post.html
@@ -1,1 +1,7 @@
-<div>{{response}}</div>
+<!--<div *ng-if="response">{{response | json }}</div>-->
+<!--div {{ items }} </div-->
+<div *ng-for="#item of items">
+    <div *ng-if="item.empty"> There are no posts </div>
+         {{ item.player | json }}
+         {{ item.query | json }}
+</div>
