Switch to services injection.

--- a/fa/components/post/post.html
+++ b/fa/components/post/post.html
@@ -1,6 +1,11 @@
 <!--<div *ng-if="response">{{response | json }}</div>-->
 <!--div {{ items }} </div-->
-<div *ng-for="#item of items">
+<!--div *ng-for="#item of items">
     <div *ng-if="item.empty"> There are no posts </div>
          {{ item.player | json }}
+</div-->
+
+<div *ng-for="#item of items">
+    {{item | json}}
 </div>
+
