--- a/fa/components/post/post.html
+++ b/fa/components/post/post.html
@@ -1,9 +1,11 @@
-<!--<div *ng-if="response">{{response | json }}</div>-->
-<!--div {{ items }} </div-->
-<!--div *ng-for="#item of items">
-    <div *ng-if="item.empty"> There are no posts </div>
-         {{ item.player | json }}
-</div-->
+<div>
+    <form [ng-form-model]="postForm" (submit) = "postContent()">
+        <div class = "form-group">
+            <input class="form-control" #newPost = "form" [ng-form-control]="postForm.controls['newPost']" placeholder="new post">
+        </div>
+        <button class="btn btn-primary" type="submit">Add Post</button>
+    </form>
+</div>
 <div>
     Player Id
     Player Paragon
