--- a/fa/components/post/post.html
+++ b/fa/components/post/post.html
@@ -18,6 +18,7 @@
         </div>
         <button class="btn btn-primary" type="submit">Add Post</button>
     </form>
+    <input [value] = "firstName">
 </div>
 
 <div>
