--- a/fa/components/formtest/formtest.html
+++ b/fa/components/formtest/formtest.html
@@ -1,18 +1,34 @@
 <div>
-    <form (ng-submit)="onSubmit(f)" #f="form">
-        <select class="form-control" ng-control="power" #power="form" [(ng-model)]="model.power">
+    <form [ng-form-model]="testForm" (ng-submit)="onSubmit(f)" #f="form">
+        <!--select class="form-control" ng-control="power" [ng-form-control]="testForm.controls['power']" #power="form" [(ng-model)]="model.power"-->
+        <select class="form-control" [ng-form-control]="testForm.controls['hero']" #power="form">
             <option *ng-for="#p of powers" [value] = "p">{{p}}</option>
         </select>
         <!--div class = "form-group">
             <div class="dropdown open">
-                <button class="btn btn-secondary dropdown-toggle" ng-control="power" #power="form" [(ng-model)]="model.power" type="button" value="Demon Hunter" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button value="eh" class="btn btn-secondary dropdown-toggle" #power="form" [ng-form-control]="testForm.controls['hero']" type="button" value="Demon Hunter" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     EH
                 </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenu1" ng-control="power" #power="form" [(ng-model)]="model.power">
-                    <button class="dropdown-item" type="button" *ng-for="#p of powers" [value] = "p" ng-control="power" #power="form" [(ng-model)]="model.power">{{p}}</button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <button class="dropdown-item" type="button" *ng-for="#p of powers" [value] = "p" #power="form" #power="form" [ng-form-control]="testForm.controls['hero']">{{p}}</button>
                 </div>
             </div>
         </div-->
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
 </div>
+
+
+
+<!--<div class="dropdown open">-->
+<!--<button class="btn btn-secondary dropdown-toggle" type="button" value="Demon Hunter" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--Hola-->
+<!--</button>-->
+<!--<div class="dropdown-menu" aria-labelledby="dropdownMenu1">-->
+<!--<button class="dropdown-item" (click)="onSelection(button1)" value="Demon Hunter" #button1 type="button">Demon Hunter</button>-->
+<!--<button class="dropdown-item" (click)="onSelection(button2)" value="Wizard" #button2 type="button">Wizard</button>-->
+<!--<button class="dropdown-item" (click)="onSelection(button3)" value="Barbarian" #button3 type="button">Barbarian</button>-->
+<!--<button class="dropdown-item" (click)="onSelection(button4)" value="Witch Doctor" #button4 type="button">Witch Doctor</button>-->
+<!--<button class="dropdown-item" (click)="onSelection(button5)" value="Monk" #button5 type="button">Monk</button>-->
+<!--</div>-->
+<!--</div>-->
