Switching to material.

--- a/fa/app/components/post/post.html
+++ b/fa/app/components/post/post.html
@@ -1,42 +1,45 @@
-<div>
-    <form [ngFormModel]="postForm" (ngSubmit) = "postContent(postForm.value)">
-        <div class = "form-group">
-            <select class="c-select" [ngFormControl]="postForm.controls['playerType']" #class="ngForm">
-                <option selected>Select your class</option>
-                <option *ngFor="let p of playerTypes" [value] = "p">{{p}}</option>
-            </select>
-        </div>
-        <br>
-        <div class="input-group">
-            <span class="input-group-addon" id="sizing-addon2">Your Paragon points</span>
-            <input type="text" [ngFormControl]="postForm.controls['playerParagonPoints']" class="form-control" placeholder="Paragon points" aria-describedby="sizing-addon2">
-        </div>
-        <br>
-        <div class="input-group">
-            <span class="input-group-addon" id="sizing-addon2">#</span>
-            <input type="text" [ngFormControl]="postForm.controls['playerBattleTag']" class="form-control" placeholder="Battle Tag" aria-describedby="sizing-addon2">
-        </div>
-        <br>
-        <div class = "form-group">
-            <select class="c-select" [ngFormControl]="postForm.controls['playerRegion']" #region="ngForm">
-                <option selected>Select your region</option>
-                <option *ngFor="let r of playerRegions" [value] = "r">{{r}}</option>
-            </select>
-        </div>
-        <button class="btn btn-primary" type="submit">Add Post</button>
-    </form>
-</div>
+
+<md-card>
+    <md-card-content>
+        <form [ngFormModel]="postForm" (ngSubmit) = "postContent(postForm.value)">
+            <div>
+                <md-input required placeholder="Your paragon points" [ngFormControl]="postForm.controls['playerParagonPoints']"></md-input>
+            </div>
+            <button md-raised-button color="primary" type="submit">Add Post</button>
+        </form>
+    </md-card-content>
+</md-card>
+
+    <!--div class = "form-group">
+        <select class="c-select" [ngFormControl]="postForm.controls['playerType']" #class="ngForm">
+            <option selected>Select your class</option>
+            <option *ngFor="let p of playerTypes" [value] = "p">{{p}}</option>
+        </select>
+    </div>
+
+    <div class="input-group">
+        <span class="input-group-addon" id="sizing-addon2">#</span>
+        <input type="text" [ngFormControl]="postForm.controls['playerBattleTag']" class="form-control" placeholder="Battle Tag" aria-describedby="sizing-addon2">
+    </div>
+    <br>
+    <div class = "form-group">
+        <select class="c-select" [ngFormControl]="postForm.controls['playerRegion']" #region="ngForm">
+            <option selected>Select your region</option>
+            <option *ngFor="let r of playerRegions" [value] = "r">{{r}}</option>
+        </select>
+    </div-->
+
 
 <div>
     Player Id
     Player Paragon
 </div>
-<div *ngFor="let post of posts">
+<!--div *ngFor="let post of posts">
     {{post.query.minParagon}}
     {{post.player.type}}
     {{post.player.battleTag}}
     {{post.player.region}}
     {{post.player.seasonal}}
     {{post.player.gameType}}
-</div>
+</div-->
 
