--- a/fa/app/components/post/post.html
+++ b/fa/app/components/post/post.html
@@ -30,16 +30,16 @@
     </div-->
 
 
-<div>
+<!--div>
     Player Id
     Player Paragon
-</div>
-<!--div *ngFor="let post of posts">
+</div-->
+<div *ngFor="let post of posts">
     {{post.query.minParagon}}
     {{post.player.type}}
     {{post.player.battleTag}}
     {{post.player.region}}
     {{post.player.seasonal}}
     {{post.player.gameType}}
-</div-->
+</div>
 
