--- a/fa/app/components/post/post.html
+++ b/fa/app/components/post/post.html
@@ -8,6 +8,7 @@
             <div>
                 <md-input required placeholder="Your battle.net tag" [ngFormControl]="postForm.controls['playerBattleTag']"></md-input>
             </div>
+
             <div>
                 <md-input required placeholder="Minimum paragon points" [ngFormControl]="postForm.controls['queryMinParagon']"></md-input>
             </div>
@@ -52,4 +53,7 @@
     </md-list-item>
 </md-list>
 
+<div>
+    <model-selector [model] = playerTypes  (select)="onVoted($event)"></model-selector>
+</div>
 
