--- a/fa/app/components/post/post.html
+++ b/fa/app/components/post/post.html
@@ -8,8 +8,13 @@
             <div>
                 <md-input required placeholder="Your battle.net tag" [ngFormControl]="postForm.controls['playerBattleTag']"></md-input>
             </div>
-            <div>
-                <model-selector [form]="postForm" [models]="playerTypes" (select)="onSelect([$event, 'playerTypes'])"></model-selector>
+            <div class="demo">
+                <div class="mdl-selectfield">
+                    <model-selector [form]="postForm" [models]="playerTypes" (select)="onSelect([$event, 'playerTypes'])" [formKey]="playerType"></model-selector>
+                </div>
+                <div class="mdl-selectfield">
+                    <model-selector [form]="postForm" [models]="playerRegions" (select)="onSelect([$event, 'playerRegions'])" [formKey]="playerRegion"></model-selector>
+                </div>
             </div>
             <div>
                 <md-input required placeholder="Minimum paragon points" [ngFormControl]="postForm.controls['queryMinParagon']"></md-input>
