--- a/front/src/app/components/post/post-list/post-list.html
+++ b/front/src/app/components/post/post-list/post-list.html
@@ -1,14 +1,16 @@
 <md-card>
 <md-card-content>
-<!--<form [formGroup]="postForm" (ngSubmit) = "postContent(postForm.value)">-->
-<!--<div>-->
-<!--<md-input required placeholder="Your paragon points" [formControl]="postForm.controls['playerParagonPoints']"></md-input>-->
-<!--</div>-->
-<!--<div>-->
-<!--<md-input required placeholder="Your battle.net tag" [formControl]="postForm.controls['playerBattleTag']"></md-input>-->
-<!--</div>-->
-<!--<div class="mdl-selectfield">-->
-<!--Your character type.-->
+<form [formGroup]="postForm" (ngSubmit) = "postContent(postForm.value)">
+<div>
+<md-input-container>
+    <input required placeholder="Your paragon points" [formControl]="postForm.controls['playerParagonPoints']"/>
+    <input required placeholder="Your battle.net tag" [formControl]="postForm.controls['playerBattleTag']"/>
+</md-input-container>
+</div>
+    <div>
+</div>
+<div class="mdl-selectfield">
+Your character type.
 <!--<model-selector [form]="postForm" [models]="playerTypes" (select)="onSelect([$event, 'playerTypes'])" [formKey]="'playerType'"></model-selector>-->
 <!--</div>-->
 <!--<div class="mdl-selectfield">-->
@@ -16,27 +18,22 @@
 <!--</div>-->
 <!--<div class="mdl-selectfield">-->
 <!--<model-selector [form]="postForm" [models]="queryGameLevels" (select)="onSelect([$event, 'queryGameLevels'])" [formKey]="'queryGameLevel'"></model-selector>-->
+</div>
+<!--<div>-->
+<!--<md-input-container required placeholder="Minimum paragon points" [formControl]="postForm.controls['queryMinParagon']"></md-input-container>-->
 <!--</div>-->
 <!--<div>-->
-<!--<md-input required placeholder="Minimum paragon points" [formControl]="postForm.controls['queryMinParagon']"></md-input>-->
+<!--<md-input-container required placeholder="Minimum paragon points" [formControl]="postForm.controls['queryGameLevel']"></md-input-container>-->
 <!--</div>-->
-<!--<div>-->
-<!--<md-input required placeholder="Minimum paragon points" [formControl]="postForm.controls['queryGameLevel']"></md-input>-->
-<!--</div>-->
-<!--<button md-raised-button color="primary" type="submit">Add Post</button>-->
-<!--</form>-->
+<button md-raised-button color="primary" type="submit">Add Post</button>
+</form>
 </md-card-content>
 </md-card>
 <!--<div class="error" *ngIf="errorMessage">{{errorMessage}}</div>-->
-<ul *ngFor="let post of posts">
-    <li>{{post.player.type}}</li>
-    <li>{{post.player.battleTag}}</li>
-    <li>{{post.player.gameType}}</li>
-</ul>
-<!--<md-list>-->
-<!--<md-list-item *ngFor="let post of posts">-->
-<!--<h3 md-line> {{post.player.type}} </h3>-->
-<!--<p md-line> {{post.player.battleTag}} </p>-->
-<!--<p md-line class="demo-2"> {{post.player.gameType}} </p>-->
-<!--</md-list-item>-->
-<!--</md-list>-->
+<md-list>
+    <md-list-item *ngFor="let post of posts">
+        <h3 md-line> {{post.player.type}} </h3>
+        <p md-line> {{post.player.battleTag}} </p>
+        <p md-line class="demo-2"> {{post.player.gameType}} </p>
+    </md-list-item>
+</md-list>
