--- a/front/src/app/components/post/post-list/post-list.html
+++ b/front/src/app/components/post/post-list/post-list.html
@@ -1,6 +1,6 @@
 <md-card>
 <md-card-content>
-<form [formGroup]="postForm" (ngSubmit) = "postContent(postForm.value)">
+<form [formGroup]="postForm" autocomplete="off" novalidate (ngSubmit) = "postContent(postForm.value)">
 <div>
 <md-input-container>
     <input required placeholder="Your paragon points" [formControl]="postForm.controls['playerParagonPoints']"/>
@@ -9,8 +9,14 @@
 </div>
     <div>
 </div>
+    Your character type.
 <div class="mdl-selectfield">
-Your character type.
+    <label for="characterType"></label>l
+        <select class="form-control" id="characterType" required>
+            <option value="">Please Select...</option>
+            <option *ngFor="let type of playerTypes" [value]="type">{{type}}</option>
+        </select>
+
 <!--<model-selector [form]="postForm" [models]="playerTypes" (select)="onSelect([$event, 'playerTypes'])" [formKey]="'playerType'"></model-selector>-->
 <!--</div>-->
 <!--<div class="mdl-selectfield">-->
@@ -25,7 +31,7 @@ Your character type.
 <!--<div>-->
 <!--<md-input-container required placeholder="Minimum paragon points" [formControl]="postForm.controls['queryGameLevel']"></md-input-container>-->
 <!--</div>-->
-<button md-raised-button color="primary" type="submit">Add Post</button>
+<button md-raised-button>Add Post</button>
 </form>
 </md-card-content>
 </md-card>
@@ -37,3 +43,7 @@ Your character type.
         <p md-line class="demo-2"> {{post.player.gameType}} </p>
     </md-list-item>
 </md-list>
+
+<div>
+    <button type="button" class="btn btn-default btn-primary" [disabled]="postForm.invalid" (click)="submit()">Submit</button>
+</div>
